--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html, body {
     width: 100%;
     height: 100vh;
     background-color: rgb(65, 65, 65);
-    background-image: url("../img/banner.jpg");
+    background-image: url("img/banner.jpg");
     background-position: center center;
     padding: 100px;
     box-sizing: border-box;
