--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ a:hover {
 .separator {
     width: 100%;
     height: 150px;
-    background-image: url("/img/separator.jpg");
+    background-image: url("img/separator.jpg");
     background-position: center center;
 }
 
