--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html, body {
     font-style: normal;
     background-color: rgb(243, 242, 240);
     color: rgb(65, 65, 65);
+    scroll-behavior: smooth;
 }
 
 .banner {
